--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,9 +1,7 @@
 {
   "ConnectionStrings": {
-    ////Local PC Connection | MySQL Database
-    //"projectconnectionstring": "Server=localhost;Port=3306;User=saiful-pc;Password=Hellobd@789;Database=diu-spa-db;"
     ////Live Database Connection | MariaDB | XeonBD | ShetuIndustry Server
-    "projectconnectionstring": "Server=103.48.119.249;Port=3306;User=tmmysql8Tst_Usr;Password=L@95!6^Bjf#98;Database=shetuind_spa_db;"
+    "projectconnectionstring": "Server=103.48.119.249;Port=3306;User=tmmysql8App_Usr2;Password=L@91!6^Bjf#24;Database=shetuind_erp_db;"
   },
   "Logging": {
     "LogLevel": {
@@ -23,6 +21,12 @@
   "EPPlus": {
     "ExcelPackage": {
       "LicenseContext": "NonCommercial"
+    }
+  },
+  "Kestrel": {
+    "Limits": {
+      "MaxRequestLineSize": 8192,
+      "MaxRequestBodySize": 104857600
     }
   }
 }
